# agent-reliability-platform

./: .gitignore  README.md  alembic.ini  pyproject.toml
apps/api/: README.md
apps/api/src/arp_api/: main.py  settings.py
apps/api/src/arp_api/dependencies/: auth.py  db.py
apps/api/src/arp_api/routes/: auth.py  health.py  memberships.py  organizations.py  projects.py  runs.py  workflows.py
apps/web/: README.md
apps/worker/: README.md
apps/worker/src/arp_worker/: __init__.py  main.py  runner.py
docs/architecture/: monorepo-plan.md  system-architecture.md
infra/docker/: README.md
infra/otel/: README.md
scripts/: README.md  seed_support_workflow.py
tests/: conftest.py  test_api.py  test_migrations.py  test_worker.py  test_workflow_registry.py
